k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-app
  template:
    metadata:
      labels:
        app: bookstore-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "3000"
    spec:
      containers:
        - name: bookstore-app
          image: bookstore:local
          ports:
            - containerPort: 3000
