k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-service
spec:
  type: ClusterIP 
  selector:
    app: bookstore-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
