k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
   - host: bookstore.local
     http:
      paths:
       - path: /
         pathType: Prefix
         backend:
          service:
            name: bookstore-service
            port:
             number: 80
